codepkg/objects/AccountContactRole__c.object
<CustomObject>
    <description>This object is a custom junction object between Account and Contact.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account for which this Contact Role is created.</description>
        <inlineHelpText>Account for which this Contact Role is created.</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>AccountContactJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact for which this Contact Role is created.</description>
        <inlineHelpText>Contact for which this Contact Role is created.</inlineHelpText>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>AccountContactJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Global_List__c</fullName>
        <description>Shows Contact Role List of Picklist values on LWC Component.</description>
        <inlineHelpText>Role of this Contact for this particular Account.</inlineHelpText>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Role_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Contact for this particular Account.</description>
        <inlineHelpText>Status of the Contact for this particular Account.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Role</label>
    <nameField>
        <displayFormat>ACJ-{000000}</displayFormat>
        <label>AccountContactJunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>